--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,6 +23,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'United States -- Politics and government -- Periodicals'
 - !lcc 'AP'
+- GITenberg
 title: 'Belford''s Magazine, Vol. II, No. 3, February 1889
 
   Dec 1888-May 1889'
